--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <script type="module" src="./main.js"></script>
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h1>Hej!!</h1>
+    <!-- <img src="./media/dogpaw.png" alt=""> -->
 </body>
+
 </html>
